Bug 440259 - [Wayland] There are three "Kwin" system services in Shortcuts KCM
Summary: [Wayland] There are three "Kwin" system services in Shortcuts KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-25 12:30 UTC by Patrick Silva
Modified: 2021-07-31 14:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
screenshot (108.61 KB, image/png)
2021-07-25 12:30 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-07-25 12:30:12 UTC
Created attachment 140323 [details]
screenshot

SUMMARY
This issue only affects Wayland session on both Arch Linux and neon unstable.
As we can see in the attached screenshot, there are three "Kwin" system services in Shortcuts KCM.

EXPECTED RESULT
one "Kwin" system service

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84
Qt Version: 5.15.2
Comment 1 Méven Car 2021-07-26 09:52:44 UTC
There are in fact:
  * KWin shortcuts
  * Touchpad shortcuts
  * Keyboard layout shortcuts

I believe this is a regression, possibly due to https://invent.kde.org/frameworks/kxmlgui/-/commit/48d07e3e813703e17eea3af0a120d64e3cd14153
Comment 2 David Redondo 2021-07-26 10:06:08 UTC
No, on wayland the shortcuts come from kwin but had no display name set so fell back to kwin. Patch here: https://invent.kde.org/plasma/kwin/-/merge_requests/1200
Comment 3 David Redondo 2021-07-26 12:57:23 UTC
Git commit d84198f3b85f0ecb9d37fd9452f98913baac7c66 by David Redondo.
Committed on 26/07/2021 at 08:37.
Pushed by davidre into branch 'master'.

Set component display name for touchpad and keyboard shortcuts

Otherwise they appear as "KWin" in the settings when we want them
to be "Touchpad" and "Keyboard Layout Switcher".
FIXED-IN:5.23

M  +6    -0    src/input.cpp
M  +1    -0    src/keyboard_layout.cpp

https://invent.kde.org/plasma/kwin/commit/d84198f3b85f0ecb9d37fd9452f98913baac7c66